style the button and background color to make it all look so fancy

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,5 @@
-$brand-color: blue;
-
-* {
-  color: $brand-color;
-  box-sizing: border-box;
-}
+@import './base/settings';
+@import './base/base';
+@import './components/button';
+@import './components/container';
+@import './components/header.scss';
