--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,6 @@
 @import './components/button';
 @import './components/container';
 @import './components/header.scss';
+@import './components/option';
+@import './components/add-option';
+@import './components/widget';
