add mobile design via media queries

--- a/src/styles/components/_add-option.scss
+++ b/src/styles/components/_add-option.scss
@@ -1,7 +1,8 @@
 .add-option {
   display: flex;
   padding: $m-size;
- 
+  flex-direction: column;
+
 }
 
 .add-option__input {
@@ -10,7 +11,18 @@
   color: $off-white;
   border-bottom: .3rem solid darken($dark-blue, 10%);
   flex-grow: 1;
-  margin-right: $s-size;
+  margin: 0 0 $s-size 0;
+  //margin-right: $s-size;
   padding: $s-size;
 
+}
+
+@media (min-width: $desktop-breakpoint) {
+  .add-option {
+    flex-direction: row;
+  }
+
+  .add-option__input{
+    margin: 0 $s-size 0 0;
+  }
 }
